--- a/Analyse_results_internal.ipynb
+++ b/Analyse_results_internal.ipynb
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "fa580724-1eef-4081-9566-7d926d0e96b6",
    "metadata": {},
    "outputs": [],
@@ -201,7 +201,7 @@
     "    for j in range(len(knn_size_names)):\n",
     "        score_this_knn = collect_mean_performance_by_knn(results_dict, j, i, 'F1')\n",
     "        p_val_table_this_knn = compute_p_val_table(score_this_knn)\n",
-    "        p_val_table_this_knn.to_csv(result_folder + 'p_val_tables/%s_knn_%s_general_%s.csv'%(label_col_names[i], knn_size_names[j], 'AUPRC'))"
+    "        p_val_table_this_knn.to_csv(result_folder + 'p_val_tables/%s_knn_%s_general_%s.csv'%(label_col_names[i], knn_size_names[j], 'F1'))"
    ]
   },
   {
